cluster/db-vs-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cmpt756marketplacedb
spec:
  hosts:
    - cmpt756marketplacedb
  http:
    - match:
        - uri:
            prefix: /api/v1/datastore
      rewrite:
        uri: /api/v1/datastore
      route:
        - destination:
            host: cmpt756marketplacedb
            port:
              number: 30004
      fault:
        delay:
          fixedDelay: 500ms
          percentage:
            value: 10
